ajustando sagas... TODO: módulo kafka corretamento nos submodulos